--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <a class="nav-link" href="#">Pricing</a>
         </li>
         <li class="my-nav">
-          <a class="nav-link btn btn-2" href="images/GorakhResume.pdf" download="GorakhResume.pdf">Download CV</a>
+          <a class="nav-link btn btn-2" href="images/GorakhResume.pdf" download="images/GorakhResume.pdf">Download CV</a>
         </li>
       </ul>
     </div>
