--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <a href="" class="btn btn-1">Hire Me</a>
         <a href=""><img class="img-logo" src="images/facebook.png"></img></a>
         <a href=""><img class="img-logo" src="images/instagram.png"></img></a>
-        <a href="www.linkedin.com/in/gorakh-kumar-a22b63231"><img class="img-logo" src="images/linkedin.png"></img></a>
+        <a href="www.linkedin.com/in/gorakhkumar"><img class="img-logo" src="images/linkedin.png"></img></a>
         <a href="https://github.com/Gorakh9580"><img class="img-logo" src="images/github.png"></img></a>
       </div>
     </div>
